fix: 修复 Vant 的 Overlay 组件的 z-index 导致的问题

--- a/src/assets/stylesheets/vars.scss
+++ b/src/assets/stylesheets/vars.scss
@@ -40,7 +40,7 @@
   --navbar-bg: var(--theme-color-green);
   --navbar-text: var(--text-color-white);
   --top-safe-area-height: 24px;
-  --overlay-mask-bg: rgba(0, 0, 0, 0.5);
+  --overlay-mask-bg: rgba(0, 0, 0, 0.7);
   --overlay-bg: var(--bg-color-grey);
   --overlay-user-bg: var(--theme-color-green);
   --overlay-user-text: var(--text-color-white);
